Fix z-index for country and language Switcher
Mentioned in https://github.com/hbz/oerworldmap/issues/1778#issuecomment-481674691

--- a/src/styles/components/Columns.pcss
+++ b/src/styles/components/Columns.pcss
@@ -8,7 +8,7 @@
   display: flex;
   transition: transform 1s;
   pointer-events: none;
-  z-index: 4;
+  z-index: 3;
 
   & .secondary,
   & .selectedFilters,
