--- a/src/styles/components/Country.pcss
+++ b/src/styles/components/Country.pcss
@@ -5,7 +5,7 @@
   position: absolute;
   right: 20px;
   top: 20px;
-  z-index: 5;
+  z-index: 4;
   border: 1px solid var(--white);
   padding: 15px;
   width: 230px;
